...
        android:textSize="18dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="Email"
        android:paddingLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"

        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="Password"
        android:paddingLeft="40dp"
...
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/login"
        android:layout_below="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_rectangle"
...
