...
        android:textColor="#313133"
        android:textSize="18dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/open_dms"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/search_icon"
                android:alpha="0.5"/>
            <TextView
...
