...
        android:text="Affan Ahmad"
        android:layout_centerInParent="true"
        android:textColor="#313133"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/follow"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="Follow"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginRight="18dp"
...
